--- a/src/components/ItemListContainer.css
+++ b/src/components/ItemListContainer.css
@@ -1,25 +1,26 @@
 .saludo{
-    font-size: 20px;
+    font-size: 50px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
-    color: #000;
+    color: rgb(49, 0, 35);
     text-align: center;
     margin: 1rem 0;
     padding: 30px;
 }
 
-.container{
-    width: 1200px !important; 
+.container {
+    width: 2000px !important;
 }
 
 .offer{
     text-align: center;
     font-size: 35px;
     font-weight: bold !important;
-    color: black;
+    color: rgb(49, 0, 35);
     height: 130px;
     padding-top: 20px;
     width: 100%;
-    font-style: oblique;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 h3{
